add POST web page and its configuration

--- a/supports/lwip/lwip/mkfs/fs/upgradeFpga.html
+++ b/supports/lwip/lwip/mkfs/fs/upgradeFpga.html
@@ -14,7 +14,7 @@
 				<INPUT type="file" name="fpgaFmUpload" id="fpgaFmUpload">
 			</DIV>
 			<DIV class="buttons">
-				<input type="button" value="Submit" class="btnSubmit" onClick="submit_firmware('fpgaUpdate')" id="btnSubmit" />
+				<input type="button" value="Submit" class="btnSubmit" onClick="submit_firmware('formFirmware', 'fpgaUpdate')" id="btnSubmit" />
 			</DIV>
 		</DIV>
 	</FORM>
