--- a/supports/lwip/lwip/mkfs/fs/upgradeMcu.html
+++ b/supports/lwip/lwip/mkfs/fs/upgradeMcu.html
@@ -14,7 +14,7 @@
 				<INPUT type="file" name="mcuFmUpload" id="mcuFmUpload">
 			</DIV>
 			<DIV class="buttons">
-				<input type="button" value="Submit" class="btnSubmit" onClick="submit_firmware('mcuUpdate')" id="btnSubmit" />
+				<input type="button" value="Submit" class="btnSubmit" onClick="submit_firmware('formFirmware', 'mcuUpdate')" id="btnSubmit" />
 			</DIV>
 		</DIV>
 	</FORM>
