debug client, javascript and browsers

--- a/supports/lwip/lwip/mkfs/fs/404.html
+++ b/supports/lwip/lwip/mkfs/fs/404.html
@@ -4,7 +4,7 @@
 
     <table width="100%">
       <tr valign="top"><td width="80">	  
-	  <a href="http://muxlab.com"><img src="/img/muxLab.png" border="0" alt="MuxLab" title="MuxLab logo"></a>
+	  <a href="http://muxlab.com"><img src="/logo.jpg" border="0" alt="MuxLab" title="MuxLab logo"></a>
 	</td><td width="500">	  
 	  <h1>500767- SDI over IP</h1>
 	  <h2>404 - Page not found</h2>
