--- a/supports/lwip/lwip/mkfs/fs/upgradeMcu.html
+++ b/supports/lwip/lwip/mkfs/fs/upgradeMcu.html
@@ -1,14 +1,12 @@
 <DIV id="forms">
+<!--
 	<FORM method="post" id="formFirmware" enctype="multipart/form-data">
+-->
+	<FORM method="post" id="formFirmware" enctype="multipart/form-data" action="mcuUpdate" target="dummyframe">
 		<DIV class="title">
 			<H2>Upgrade MCU Firmware</H2>
 		</DIV>
 		<DIV class="fields">
-			<!--	<DIV class="field">
-				<LABEL for="fwVer">MCU Firmware Version:</LABEL>
-			<DIV class="label" id="fwVer">fwVer</DIV>
-			</DIV> -->
-
 			<DIV class="field">
 				<LABEL for="fileToUpload">Select MCU File:</LABEL>
 				<INPUT type="file" name="mcuFmUpload" id="mcuFmUpload">
